<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/info_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <TextView
        android:id="@+id/no_commercial_purposes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_application_has_no_commercial_purposes"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/info_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/info_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_descprition"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/no_commercial_purposes_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/api_link_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/api_https_awesomeapi_com_br_api_de_moedas"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_description_text_view" />

    <TextView
        android:id="@+id/git_link_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:linksClickable="true"
        android:autoLink="web"
        android:text="@string/https_github_com_alicasts_currencyinsight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/api_link_text_view" />

    <Button
        android:id="@+id/closeInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/git_link_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>