<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/settings_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/tertiary_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <TextView
        android:id="@+id/dummy_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_data_for_the_past"
        android:textColor="@color/tertiary_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/settings_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dummy_text_view">

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="wrap_content"
            android:layoutDirection="rtl"
            android:textStyle="bold"
            android:textColor="@color/tertiary_text_color"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/_15_days"/>

        <RadioButton
            android:id="@+id/radioButton30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/tertiary_text_color"
            android:layout_marginHorizontal="12dp"
            android:layoutDirection="rtl"
            android:text="@string/_30_days" />

        <RadioButton
            android:id="@+id/radioButton90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/tertiary_text_color"
            android:layout_marginHorizontal="12dp"
            android:layoutDirection="rtl"
            android:text="@string/_90_days" />

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_mode_switch"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:thumbTint="@color/colorBackground"
        android:text="@string/dark_mode"
        android:textColor="@color/tertiary_text_color"
        android:textStyle="bold"
        app:track="@drawable/track_dark_mode_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/closeSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"
        android:textColor="@color/button_text_color"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button_primary_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>